--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title> MyWebsite_Instagram</title>
+<html><head>
+<title>Rhea Vlog</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -9,25 +7,42 @@
 
 
 <div class="header">
-<h1>"me_reyaaa" </h1>
-<p> rheaabode </p>
-<p> posts followers following </p>
+<h1>Welcome</h1>
+<p>Vlog for school purposes</p>
 </div>
 
 <div class="Content">
-<h2>@me_reyaaa</h2>
+<h2>daily ganap</h2>
 
 <p> professional dashboard </p>
-<p> new tools are now available.</p>
+<p>no hate just love by: loving rhea </p>
 </div>
 <table>
- <tr>
-   <th>   Edit profile   </th>
-   <th>   Share profile  </th>
+ <tbody><tr>
+   <th>   SUBSCRIBE  </th>
+   <th>   SHARE  </th>
  </tr>
- </table>
+ </tbody></table>
  
-</body>
+ <div class="wrapper">
+  <nav class="navbar">
+   <img class="Profile" src="https://scontent.fcgy2-4.fna.fbcdn.net/v/t39.30808-1/528176496_1513891866458774_947475252785194982_n.jpg?stp=dst-jpg_s160x160_tt6&amp;_nc_cat=105&amp;ccb=1-7&amp;_nc_sid=1d2534&amp;_nc_eui2=AeHT6gUWHXFYGZLx8BeP5GyKS3Z8TpJLec5LdnxOkkt5zlue8JbK6j8pSu-J_cBGxOVtM6opoTgjL9CwZlzGNaLW&amp;_nc_ohc=pbZB94c0YY0Q7kNvwHHMTrz&amp;_nc_oc=Admc8mXPUyYiD8X0DsVuYuwozY7tOnlRZlriAONvFDFeZ_NCZ8jQ8Ai0vfd5wBX_puA&amp;_nc_zt=24&amp;_nc_ht=scontent.fcgy2-4.fna&amp;_nc_gid=0nk_p2fe674Kuhs6b79l_Q&amp;oh=00_Afatr1zUX8HKhnAELhsIDYXBfPB-ZaYhZUPxts6sJfdxwA&amp;oe=68E0394E">
+ 
+ 
+ <ul>
+     <li><a href="#">Home</a></li> 
+     <li><a href="#">About</a></li> 
+     <li><a href="#">Service</a></li> 
+     <li><a href="#">Contact</a></li> 
+     <li><a href="#">Feedback</a></li> 
+ 
+ </ul>
+  </nav>
+   </div>
+    
+ 
+ 
+
  
 <footer>
 <p>@ 2025 My Website. All rights reserved.</p>
@@ -35,4 +50,5 @@
 
 
 
-</html>
+
+</body></html>
