--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-<title>Rhea Vlog</title>
+<title>Rhea Blog</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -8,7 +8,7 @@
 
 <div class="header">
 <h1>Welcome</h1>
-<p>Vlog for school purposes</p>
+<p>Blog for school purposes</p>
 </div>
 
 <div class="Content">
@@ -52,3 +52,4 @@
 
 
 </body></html>
+
